[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gofo-corpus-tools"
version = "0.1.0"
description = "Ingest + per-bot subset build tools for gofo knowledge-base repos (gofo_it_corpus, gofo_hr_corpus, ...)"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6",
]

[project.optional-dependencies]
# `ingest` brings the heavy ML deps. CI for build_bot_subset only needs base.
ingest = [
    "sentence-transformers>=2",
    "anthropic>=0.40",
    "numpy>=1.24",
]

[project.scripts]
corpus-ingest = "gofo_corpus_tools.ingest:main"
corpus-build-subsets = "gofo_corpus_tools.build_bot_subset:main"

[tool.setuptools.packages.find]
where = ["src"]
